--- a/index.html
+++ b/index.html
@@ -20,32 +20,20 @@
 	var left = -2.5;
 	var iterations = 100;
 	var $render_out = $('#render-out');
-	$.ajax(get_url(200, 200, iterations, top2, right, bottom, left, 0))
-	.done(function(data) {
-		render($render_out, JSON.parse(data));
-	});
+	render($render_out, 200, 200, iterations, top2, right, bottom, left);
 	$('#button-clicker').click(function(){
-		$.ajax(get_url(500, 500, iterations * 2, top2, right, bottom, left, 0))
-		.done(function(data) {
-			render($render_out, JSON.parse(data));
-		});
+		render($render_out, 500, 500, iterations * 2, top2, right, bottom, left);
 	});
 	$('#render-out').click(function(eve) {
 		var transformed_x = scale_value(eve.offsetX, 0, $render_out.width(), left, right);
 		var transformed_y = scale_value(eve.offsetY, 0, $render_out.height(), top2, bottom);
-		console.log('Transformed:', transformed_x, transformed_y);
 		var new_half_width = (right - left)/4;
 		var new_half_height = (top2 - bottom)/4;
-		console.log('New w/h:', new_half_width * 2, new_half_height * 2);
 		left = transformed_x - new_half_width;
 		right = transformed_x + new_half_width;
 		top2 = transformed_y + new_half_height;
 		bottom = transformed_y - new_half_height;
-		console.log('New coords:', top2, right, bottom, left)
-		$.ajax(get_url(200, 200, iterations, top2, right, bottom, left, 0))
-		.done(function(data) {
-			render($render_out, JSON.parse(data));
-		});
+		render($render_out, 200, 200, iterations * 2, top2, right, bottom, left);
 	});
 </script>
 </body>
