--- a/glsl.html
+++ b/glsl.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE HTML>
 <html lang="en">
 <head>
@@ -14,7 +13,7 @@
 
 <canvas id="viewport" width="600" height="400"></canvas>
 
-<script id="fragment" type="x-shader/x-fragment">
+<script id="fragment-mandel" type="x-shader/x-fragment">
 #ifdef GL_ES
 precision mediump float;
 #endif
@@ -92,8 +91,8 @@ int mandel_point(in float x0, in float y0) {
   return iterations;
 }
 void main (void) {
-  int i = mandel_point(scale_value(gl_FragCoord.x/resolution.x, 0.0, 1.0, left,  right),
-                       scale_value(gl_FragCoord.y/resolution.y, 0.0, 1.0,  top, bottom));
+  int i = mandel_point(scale_value(gl_FragCoord.x/resolution.x, -2.5, 1.0, left,   right),
+                       scale_value(gl_FragCoord.y/resolution.y, -1.0, 1.0, bottom, top));
   if(i == iterations) {
     gl_FragColor = vec4(0.0, 0.0, 0.0, 1.0);
   }
@@ -103,38 +102,124 @@ void main (void) {
 }
 </script>
 
+<script id="fragment-checker" type="x-shader/x-fragment">
+#ifdef GL_ES
+precision mediump float;
+#endif
+
+uniform float top;
+uniform float right;
+uniform float bottom;
+uniform float left;
+uniform vec2 resolution;
+
+bool xor(bool a, bool b) {
+  return (a && !b) || (b && !a);
+}
+
+float scale_value(in float value, in float v_low, in float v_high, in float s_low, in float s_high) {
+  return (((value - v_low)/(v_high - v_low)) * (s_high - s_low)) + s_low;
+}
+
+void main (void) {
+  if (xor(mod(scale_value(gl_FragCoord.x/resolution.x, 0.0, 1.0, left, right) * 10.0, 1.0) < 0.5,
+          mod(scale_value(gl_FragCoord.y/resolution.y, 0.0, 1.0, bottom, top) * 10.0, 1.0) < 0.5)) {
+    gl_FragColor = vec4(0.0, 0.0, 0.0, 1.0);
+  }
+  else {
+    gl_FragColor = vec4(1.0, 1.0, 1.0, 1.0);
+  }
+}
+</script>
+
 <script src="js/glsl.js" type="text/javascript"></script>
 <script src="js/jquery.min.js" type="text/javascript"></script>
+<script src="js/mousewheel.js" type="text/javascript"></script>
 <script type="text/javascript">
 if (!Glsl.supported()) alert("WebGL is not supported.");
 
+var $viewport = $('#viewport');
+
 var glsl = Glsl({
-  canvas: document.getElementById("viewport"),
-  fragment: document.getElementById("fragment").textContent,
+  canvas: $viewport[0],
+  fragment: $('#fragment-checker').text(),
   variables: {
-      top: -1,
+      top: 1,
       right: 1,
-      bottom: -1,
-      left: -2.5
+      bottom: 0,
+      left: 0
   },
-  update: function (time) {
-    var center_x = 0.3750001200618655, center_y = -0.2166393884377127;
-    var center_x = 0.3760001200618655, center_y = -0.2266393884377127;
-    var scale = 10000/(time*time);
-    this.set('top', center_y + scale);
-    this.set('right', center_x + scale);
-    this.set('bottom', center_y - scale);
-    this.set('left', center_x - scale*2.5);
-  }
+  update: function (time) {}
 }).start();
+
+
+
+var old_x, old_y;
+resting = false;
+
+function set_pos() {
+  var relative_x, relative_y;
+  old_x = view_x;
+  old_y = view_y;
+  relative_x = 1-(view_x / width);
+  relative_y = view_y / height;
+  glsl.set('left', relative_x);
+  glsl.set('right', relative_x + 1/zoom);
+  glsl.set('top', relative_y + 1/zoom);
+  glsl.set('bottom', relative_y);
+}
 
 $('#go').click(function(){
   glsl.start();
 });
 $('#stop').click(function(){
-    console.log('stop');
   glsl.stop();
-})
+});
+
+
+var dragging = false;
+var view_x = 0, view_y = 0, zoom = 1;
+var mouse_x = 0, mouse_y = 0;
+var zoom = 1;
+var offset_x, offset_y;
+var width = $viewport.width();
+var height = $viewport.height();
+var abscroll = 0;
+$viewport.mousedown(function(e) {
+  offset_x = view_x - e.offsetX/zoom;
+  offset_y = view_y - e.offsetY/zoom;
+  dragging = true;
+  //glsl.start();
+  resting = false;
+  return false;
+}).mousemove(function(e) {
+  mouse_x = e.offsetX;
+  mouse_y = e.offsetY;
+  if (dragging) {
+    view_x = offset_x + mouse_x/zoom;
+    view_y = offset_y + mouse_y/zoom;
+    set_pos();
+  }
+  return false;
+}).mouseup(function(e) {
+  //glsl.stop();
+  dragging = false;
+  return false;
+}).mousewheel(function(event, delta, delta_x, delta_y) {
+  //glsl.start();
+  abscroll = Math.max(0, abscroll + delta_y);
+  var old_zoom = zoom;
+  zoom = Math.exp(abscroll/1000);
+  var zoom_factor =  (1/zoom - 1/old_zoom);
+  // | <- view_x   x   view_x + 1/zoom -> |
+  view_x += (mouse_x/width) * width * zoom_factor;
+  view_y -= (1-(mouse_y/height)) * height * zoom_factor;
+  console.log(mouse_y, height, zoom_factor)
+  set_pos();
+  //glsl.stop();
+  return false;
+});
+
 </script>
 </body>
 </html>
